<resources>
    <string name="appName">Светер.ком</string>
    <string name="welcomeBackSign">Рады вас видеть 👋</string>
    <string name="questSign">Гость</string>
    <string name="countryNumberCodeSign">🇷🇺 (+7)</string>
    <string name="homeSign">Главная</string>
    <string name="tripSign">Поездка</string>
    <string name="inboxSign">Входящие</string>
    <string name="profileSign">Профиль</string>

    <string name="insertLoginPasswordSubtitle">Чтобы войти в аккаунт</string>
    <string name="weWereMissingYouSubtitle">Мы скучали по вам</string>
    <string name="protectAccountSubtitle">Придумайте надёжный пароль, чтобы защитить доступ к своему аккаунту</string>
    <string name="enterConfitmationCodeSubtitle">Мы выслали вам код в виде SMS-сообщения. Не сообщайте его никому!</string>
    <string name="letsGetToKnowEachOtherBetterSubtitle">Давайте познакомимся поближе</string>
    <string name="registrationSubtitle">Зарегистрируйтесь с помощью номера телефона и отправляйтесь в путешестиве</string>
    <string name="startRideSubtitle">Организуйте или присоединитесь к поездке 🚗</string>
    <string name="makeDecisionAboutRoleSubtitle">Вы будете в роли пассажира или водителя транспорта?</string>
    <string name="chooseTravelPathSubtitle">Выберите начальную и конечную точку поездки</string>
    <string name="chooseTravelPathByMapSubtitle">Вы также можете выбрать нужную точку на карте</string>
    <string name="chooseOtherTravelParametersSubtitle">Укажите дополнительную ифнормацию</string>
    <string name="passengersCountSubtitle">Количество пассажиров</string>
    <string name="dateTimeDepartureSubtitle">Дата-время начала поездки</string>
    <string name="desiredTripCostSubtitle">Желаемая стоимость поездки</string>

    <string name="insertLoginPasswordTitle">Введите пароль</string>
    <string name="protectAccountTitle">Защитите аккаунт</string>
    <string name="enterConfirmationCodeTitle">Введите код подтверждения</string>
    <string name="tellUsAboutYourselfTitle">Расскажите нам о себе</string>
    <string name="registrationTitle">Регистрация аккаунта</string>
    <string name="loginTitle">Вход в аккаунт</string>
    <string name="letsTravelTitle">Давайте путешествовать</string>
    <string name="welcomeToAppTitle">Добро пожаловать в Светер.ком</string>
    <string name="startRideTitle">Поехали</string>
    <string name="makeDecisionAboutRoleTitle">Кем будете?</string>
    <string name="chooseTravelPathTitle">Укажите путь</string>
    <string name="chooseOtherTravelParametersTitle">Уточните</string>
    <string name="driverProposalsChapterTitle">Поездки</string>
    <string name="passengerProposalsChapterTitle">Пассажиры</string>

    <string name="iAmNewHereAction">Я тут впервые</string>
    <string name="loginAction">Войти в аккаунт</string>
    <string name="getVerificationCodeAction">Получить код</string>
    <string name="iAmPassengerAction">Я — пассажир</string>
    <string name="iAmDriverAction">Я — водитель</string>
    <string name="closeAction">Закрыть</string>
    <string name="goBackAction">Вернуться</string>
    <string name="moreAction">Ещё</string>
    <string name="logoutAction">Выйти из аккаунта</string>

    <string name="phoneNumberHint">Номер телефона</string>
    <string name="confirmationCodeHint">Код подтверждения</string>
    <string name="firstNameHint">Имя</string>
    <string name="lastNameHint">Фамилия</string>
    <string name="dateOfBirthHint">Дата рождения</string>
    <string name="passwordHint">Пароль</string>
    <string name="passwordConfirmationHint">Потверждение пароля</string>
    <string name="pointOfDepartureHint">Начальная точка</string>
    <string name="pointOfArrivalHint">Конечная точка</string>
    <string name="departureDateHint">Дата отбытия</string>
    <string name="departureTimeHint">Время отбытия</string>
    <string name="tripCostHint">Стоимость поездки</string>

    <string name="networkIssue">Ошибка: Проблемы с подключением к сети</string>
    <string name="invalidConfirmationCodeIssue">Ошибка: Неверный код подтверждения</string>
    <string name="invalidPasswordIssue">Ошибка: Неверный пароль</string>
    <string name="differentPasswordsIssue">Ошибка: Указанные пароли не совпадают</string>
    <string name="phoneNumberDuplicationIssue">Ошибка: Пользователь с таким номером уже существует</string>
    <string name="phoneNumberDoesNotExistIssue">Ошибка: Пользователь с таким номером не существует</string>

    <string name="confirmationCodeMessage">"Vash kod podtverzhdeniya. Ne soobshchayte nikomu!\n%key%\n\nSveter.com"</string>

    <string name="yandexMapAPIToken">6b23293d-5586-402c-ad1f-aaebec4c56a8</string>
    <string name="smsRuAPIToken">C6B81E61-B058-7096-454F-DCDAC966B22E</string>

    <string name="rubChar">₽</string>
</resources>