<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLoginOrRegistrationActivity"
    android:background="@color/dark_green">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/letsTravelTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/activitySubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcomeToAppTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitySubtitle"
        app:cardCornerRadius="@dimen/filledButtonCornerRadius"
        app:cardBackgroundColor="@color/white">

        <Button
            android:id="@+id/iAmNewHereButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/filled_button_green_ripple_animation"
            android:text="@string/iAmNewHereAction"
            android:textAllCaps="false"
            android:textColor="@color/dark_green" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/filled_button_green_ripple_animation"
        android:text="@string/loginAction"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/notifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Вызвать уведомление"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="92dp" />

</androidx.constraintlayout.widget.ConstraintLayout>