<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationPhoneNumberFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/activityTitle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/registrationTitle"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/activitySubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/registrationSubtitle"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="12dp"
                android:padding="10dp"
                android:background="@drawable/white_filled_background_field">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/countryNumberCodeSign"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/dirty_grey"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"/>
                <EditText
                    android:id="@+id/phoneNumberField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/dirty_grey"
                    android:hint="@string/phoneNumberHint"
                    android:textColorHint="@color/light_grey"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/getVerificationCodeButtonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="51dp"
                app:cardCornerRadius="@dimen/filledButtonCornerRadius"
                app:cardBackgroundColor="@color/dark_orange">
                <Button
                    android:id="@+id/getVerificationCodeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_animation_light_orange_oval"
                    android:text="@string/getVerificationCodeAction"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>