<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/activityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/protectAccountTitle"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/activitySubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/protectAccountSubtitle"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="25dp"/>

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="12dp"
                android:padding="15dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textSize="16sp"
                android:maxLength="30"
                android:inputType="textPassword"
                android:textColor="@color/dirty_grey"
                android:hint="@string/passwordHint"
                android:textColorHint="@color/light_grey"
                android:gravity="center_horizontal"
                android:background="@drawable/white_filled_background_field"/>

            <EditText
                android:id="@+id/passwordConfirmationField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="12dp"
                android:padding="15dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textSize="16sp"
                android:maxLength="30"
                android:inputType="textPassword"
                android:textColor="@color/dirty_grey"
                android:hint="@string/passwordConfirmationHint"
                android:textColorHint="@color/light_grey"
                android:gravity="center_horizontal"
                android:background="@drawable/white_filled_background_field"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/finishRegistrationButton"
            android:layout_width="@dimen/fabSize"
            android:layout_height="@dimen/fabSize"
            android:padding="@dimen/fabCheckPadding"
            android:scaleType="fitXY"
            android:background="@drawable/orange_filled_oval_ripple_animation_light_orange_rectangle"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/fabMargin"
            android:layout_marginEnd="@dimen/fabMargin"
            android:src="@drawable/white_check"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>