<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosingOtherTravelParametersActivity"
    android:background="@color/dark_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/decreaseButton"
                android:layout_width="@dimen/fabSize"
                android:layout_height="@dimen/fabSize"
                android:layout_marginLeft="@dimen/fabMargin"
                android:background="@drawable/white_filled_oval_ripple_animation_light_green_rectangle"
                android:clickable="true"
                android:padding="@dimen/fabArrowPadding"
                android:scaleType="fitXY"
                android:src="@drawable/dark_green_ios_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/passengerCountField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/defaultPassengersCount"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/increaseButton"
                android:layout_width="@dimen/fabSize"
                android:layout_height="@dimen/fabSize"
                android:layout_marginEnd="@dimen/fabMargin"
                android:background="@drawable/white_filled_oval_ripple_animation_light_green_rectangle"
                android:clickable="true"
                android:padding="@dimen/fabArrowPadding"
                android:scaleType="fitXY"
                android:src="@drawable/dark_green_ios_arrow_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/passengersCountSubtitle"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/departureDateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@drawable/white_filled_background_field"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:hint="@string/departureDateHint"
                android:inputType="date"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/dirty_grey"
                android:textColorHint="@color/light_grey"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/departureTimeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:background="@drawable/white_filled_background_field"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:hint="@string/departureTimeHint"
                android:inputType="time"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/dirty_grey"
                android:textColorHint="@color/light_grey"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/dateTimeDepartureSubtitle"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tripCostField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/white_filled_background_field"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:hint="@string/tripCostHint"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/dirty_grey"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/activitySubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/desiredTripCostSubtitle"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/publishButton"
        android:layout_width="@dimen/fabSize"
        android:layout_height="@dimen/fabSize"
        android:padding="@dimen/fabCheckPadding"
        android:scaleType="fitXY"
        android:background="@drawable/white_filled_oval_ripple_animation_light_green_rectangle"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/fabMargin"
        android:layout_marginEnd="@dimen/fabMargin"
        android:src="@drawable/dark_green_check"/>

</androidx.constraintlayout.widget.ConstraintLayout>