<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosingTravelPathActivity"
    android:background="@color/dark_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/pointOfDepartureField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="15dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="text"
                android:textColor="@color/dirty_grey"
                android:hint="@string/pointOfDepartureHint"
                android:textColorHint="@color/light_grey"
                android:background="@drawable/white_filled_background_field"/>

            <EditText
                android:id="@+id/pointOfArrivalField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="text"
                android:textColor="@color/dirty_grey"
                android:hint="@string/pointOfArrivalHint"
                android:textColorHint="@color/light_grey"
                android:background="@drawable/white_filled_background_field"/>

        </LinearLayout>

        <TextView
            android:id="@+id/activitySubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/chooseTravelPathByMapSubtitle"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/filledButtonCornerRadius"
            android:layout_marginTop="10dp">

            <com.yandex.mapkit.mapview.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/applyPathPointsButton"
        android:layout_width="@dimen/fabSize"
        android:layout_height="@dimen/fabSize"
        android:padding="@dimen/fabArrowPadding"
        android:scaleType="fitXY"
        android:background="@drawable/green_filled_oval_ripple_animation_light_green_rectangle"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/fabMargin"
        android:layout_marginEnd="@dimen/fabMargin"
        android:src="@drawable/white_arrow_forward"/>

</androidx.constraintlayout.widget.ConstraintLayout>